This file documents the revision history for mod_gearman.

next:
          - gearman_proxy.pl moved to separate repository

3.2.1 Mon 21 Oct 18:15:25 CEST 2019
          - fix memory leak when using latest libgearman

3.2.0 Tue 10 Sep 08:56:51 CEST 2019
          - rebuild to match with new naemon 1.1.0 api version

3.1.0 Mon Jul  1 15:34:56 CEST 2019
          - fix macro escaping issue in notifications

3.0.9 Tue Apr 16 17:18:09 CEST 2019
          - fix issue with repeating checks

3.0.8 Fri Feb 15 15:21:48 CET 2019
          - code cleanup, use INITIATE events for naemon and nagios 4
            - requires at least naemon 1.0.9, will result in memory leaks otherwise
          - fix orphaned checks in naemon

3.0.7 Fri Nov 30 17:03:35 CET 2018
          - change timestamp format to double
          - add support for latest nagios core
          - fix incrementing naemon host check attempts by 2 each check

3.0.6 Thu Jul 26 10:05:56 CEST 2018
          - gearman_proxy.pl: set tcp keepalive
          - fix memory leak when using naemon
          - check_gearman: add -x option to alert queue without worker
          - update nagios4 header files to version 4.3.4

3.0.5 Mon Jul 10 21:55:17 CEST 2017
          - fix issue with contact macros (#120 Adrian Lopez)
          - cleanup send_gearman.pl tool

3.0.4 Fri Jun 23 16:35:26 CEST 2017
          - fix issue with notification macros
          - fix corrupted check_source

3.0.3 Mon Jun 12 11:32:11 CEST 2017
          - fix undefined symbol notification_reason_name in nagios3 module

3.0.2 Fri May  5 12:13:45 CEST 2017
          - add distribution of notifications

3.0.1 Mon Jan 30 13:00:47 CET 2017
          - fix segfault on receiving host result for non-existing host with naemon core
          - fix memory leak when using naemon core (#106 Jean-François Rameau)

3.0.0 Mon Sun Oct 30 19:49:24 CET 2016